[package]
name = "simple-ecdh"
version = "0.1.1"
edition = "2024"
description = "A simple ecdh implementation for rust"
repository = "https://github.com/Redmomn/simple-ecdh-rs"
readme = "README.md"
license = "MIT"

[dependencies]
md-5 = "0.10.6"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["criterion", "flamegraph","prost-codec"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "key_exchange"
harness = false

[[bench]]
name = "pack_public"
harness = false
