[package]
name = "simple-ecdh"
version = "0.2.0"
edition = "2024"
description = "A simple ecdh implementation for rust"
repository = "https://github.com/Redmomn/simple-ecdh-rs"
keywords = ["ecdh", "elliptic-curve", "cryptography"]
readme = "README.md"
license = "MIT"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand"] }
md-5 = "0.10.6"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false
